--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -86,15 +86,20 @@ h1 {
 }
 
 
+@media (max-width :400px) {
+    .main-container {
+        padding: 2rem 1rem !important;
+    }
+}
 
-@media (max-width :575px) {
+@media (max-width :595px) {
     .recipe-container {
         justify-content: flex-start !important;
         flex-wrap: wrap;
     }
 
     .main-container {
-        padding: .5rem 1rem !important;
+        padding: 1rem 1rem !important;
     }
 }
 
