--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -86,20 +86,26 @@ h1 {
 }
 
 
-@media (max-width :400px) {
+@media (max-width :365px) {
     .main-container {
-        padding: 2rem 1rem !important;
+        padding: 7rem 0rem !important;
     }
 }
 
-@media (max-width :595px) {
+@media (max-width :400px) {
+    .main-container {
+        padding: 5rem 0rem !important;
+    }
+}
+
+@media (max-width :590px) {
     .recipe-container {
         justify-content: flex-start !important;
         flex-wrap: wrap;
     }
 
     .main-container {
-        padding: 1rem 1rem !important;
+        padding: 3rem 1rem !important;
     }
 }
 
