--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -176,7 +176,7 @@
 
             if (!sessionStorage.getItem(recipeId)) {
                 sessionStorage.setItem(recipeId, "true");
-                fetch(`http://localhost:8080/recipes/pageCount/${recipeId}`)
+                fetch(`https://yammyrecipes.onrender.com/recipes/pageCount/${recipeId}`)
                     .then((res) => res.json())
                     .then((data) => console.log(data))
                     .catch((error) => console.error('Error incrementing page count:', error));
