--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -3,12 +3,10 @@
     /* share button css */
 
     .share{
-      color: white;
-      background-color: grey;
+      color: black;
       font-size: 1.5rem;
-      padding: .8rem 1rem;
-      border-radius: 40%;
       cursor: pointer;
+      margin: 0rem 1rem;
     }
 
 </style>
